--- a/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
@@ -5,7 +5,7 @@
 
 [IMPORTANT]
 ====
-You can manage Visual Studio Code extensions by setting up and using an internal, on-premises Open VSX registry. This approach provides full control over the extension lifecycle, enables offline use, and improves compliance. The embedded plugin registry is deprecated, with the Open VSX registry serving as its successor. Refer to the xref:running-the-open-vsx-on-premises.adoc[] for detailed setup instructions.
+You can manage Visual Studio Code extensions by setting up an internal, on-premises Open VSX Registry. This approach provides full control over the extension lifecycle, enables offline use, and improves compliance. The embedded plugin registry is deprecated; the Open VSX Registry is its successor. See xref:running-the-open-vsx-on-premises.adoc[Running the Open VSX Registry on premises] for detailed setup instructions.
 ====
 
 You can add or remove extensions in the embedded Open VSX registry instance. This results in a custom build of the Open VSX registry that can be used in your organization’s workspaces. 
