Apply suggestion from @gtrivedi88
Co-authored-by: Gaurav Trivedi <90042568+gtrivedi88@users.noreply.github.com>

--- a/modules/administration-guide/pages/configuring-a-user-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-a-user-namespace.adoc
@@ -54,7 +54,7 @@ after being deleted from {prod-namespace} namespace:
 ----
 che.eclipse.org/sync-retain-on-delete: "true"
 ----
-For example, to mount a default SSH Config into every workspace, you need to create the ConfigMap:
+For example, to mount a default SSH configuration into every workspace, you must create a ConfigMap:
 +
 ====
 [source,yaml,subs="+attributes,+quotes"]
