Apply suggestion from @gtrivedi88
Co-authored-by: Gaurav Trivedi <90042568+gtrivedi88@users.noreply.github.com>

--- a/modules/administration-guide/pages/configuring-a-user-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-a-user-namespace.adoc
@@ -75,7 +75,7 @@ data:
 ----
 ====
 +
-This ConfigMap will propagate the SSH Config as an extension to the existing default SSH Config by the `Include /etc/ssh/ssh_config.d/*.conf` argument, see: link:https://man.openbsd.org/ssh_config#Include[].
+This **ConfigMap** propagates the SSH configuration as an extension to the existing default SSH configuration by using the `Include /etc/ssh/ssh_config.d/*.conf` argument. For more information, review the link:https://man.openbsd.org/ssh_config#Include[Include] definition.
 +
 See the link:https://github.com/devfile/devworkspace-operator/blob/main/docs/additional-configuration.adoc#automatically-mounting-volumes-configmaps-and-secrets[mounting volumes, configmaps, and secrets]
 for other possible labels and annotations.
