Apply suggestion from @gtrivedi88
Co-authored-by: Gaurav Trivedi <90042568+gtrivedi88@users.noreply.github.com>

--- a/modules/end-user-guide/pages/mounting-ssh-configuration.adoc
+++ b/modules/end-user-guide/pages/mounting-ssh-configuration.adoc
@@ -6,7 +6,8 @@
 
 [id="mounting-ssh-configuration"]
 = Mounting SSH configuration
-
+[role="_abstract"]
+This procedure describes how to mount custom SSH configurations into your workspaces. By creating and applying a **ConfigMap**, you can extend the default SSH settings with additional parameters or host-specific configurations. This ensures that your development environment maintains consistent connectivity to remote repositories and servers. Use this method to automate the propagation of SSH credentials and settings across multiple workspaces within your cluster.
 [NOTE]
 ====
 The default SSH config will be set automatically to the `ssh_config` content from the SSH Secret, added from the `User Preferences` menu. It can be extended by mounting additional SSH Config file with `*.conf` extension to the `/etc/ssh/ssh_config.d/` directory.
