Apply suggestion from @gtrivedi88
Co-authored-by: Gaurav Trivedi <90042568+gtrivedi88@users.noreply.github.com>

--- a/modules/end-user-guide/pages/mounting-ssh-configuration.adoc
+++ b/modules/end-user-guide/pages/mounting-ssh-configuration.adoc
@@ -12,7 +12,7 @@ This procedure describes how to mount custom SSH configurations into your worksp
 ====
 The system sets the default SSH configuration automatically based on the `ssh_config` content from the SSH secret added in the **User Preferences** menu. You can extend this configuration by mounting an additional SSH configuration file with a `.conf` extension to the `/etc/ssh/ssh_config.d/` directory.
 ====
-Follow the instructions below to mount an SSH config file in a workspace.
+To mount an SSH configuration file in a workspace, complete the following steps.
 
 .Prerequisites
 
