Apply suggestion from @gtrivedi88
Co-authored-by: Gaurav Trivedi <90042568+gtrivedi88@users.noreply.github.com>

--- a/modules/end-user-guide/pages/mounting-ssh-configuration.adoc
+++ b/modules/end-user-guide/pages/mounting-ssh-configuration.adoc
@@ -16,7 +16,7 @@ To mount an SSH configuration file in a workspace, complete the following steps.
 
 .Prerequisites
 
-* You have logged in to the cluster.
+* You are logged in to the cluster.
 
 .Procedure
 
