Apply suggestion from @gtrivedi88
Co-authored-by: Gaurav Trivedi <90042568+gtrivedi88@users.noreply.github.com>

--- a/modules/end-user-guide/pages/mounting-ssh-configuration.adoc
+++ b/modules/end-user-guide/pages/mounting-ssh-configuration.adoc
@@ -20,7 +20,7 @@ To mount an SSH configuration file in a workspace, complete the following steps.
 
 .Procedure
 
-. Prepare a new {orch-name} ConfigMap.
+. Create a new {orch-name} **ConfigMap**.
 +
 [source,yaml,subs="+quotes,+attributes,+macros"]
 ----
