Apply suggestion from @gtrivedi88
Co-authored-by: Gaurav Trivedi <90042568+gtrivedi88@users.noreply.github.com>

--- a/modules/end-user-guide/pages/mounting-ssh-configuration.adoc
+++ b/modules/end-user-guide/pages/mounting-ssh-configuration.adoc
@@ -39,7 +39,7 @@ data:
   ssh-config.conf: <ssh config content> <2>
 ----
 +
-<1> A user namespace. Visit `pass:c,a,q[{prod-url}]/api/kubernetes/namespace` to get your {prod-short} user namespace as `name`.
+<1> A user namespace. Visit `pass:c,a,q[{prod-url}]/api/kubernetes/namespace` to retrieve your {prod-short} user namespace `name`.
 <2> The content of your SSH Config file.
 
 . Apply the ConfigMap.
