Apply suggestion from @gtrivedi88
Co-authored-by: Gaurav Trivedi <90042568+gtrivedi88@users.noreply.github.com>

--- a/modules/end-user-guide/pages/mounting-ssh-configuration.adoc
+++ b/modules/end-user-guide/pages/mounting-ssh-configuration.adoc
@@ -42,7 +42,7 @@ data:
 <1> A user namespace. Visit `pass:c,a,q[{prod-url}]/api/kubernetes/namespace` to retrieve your {prod-short} user namespace `name`.
 <2> The content of your SSH configuration file.
 
-. Apply the ConfigMap.
+. Apply the **ConfigMap**.
 +
 [source,subs="+quotes,+attributes"]
 ----
