--- a/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
+++ b/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
@@ -7,9 +7,9 @@
 [id="extensions-for-microsoft-visual-studio-code-open-source"]
 = Extensions for Microsoft Visual Studio Code - Open Source
 
-To manage extensions, link:https://github.com/microsoft/vscode[this IDE] uses one of these link:https://open-vsx.org/about[Open VSX] registry instances:
+To manage extensions, {prod-short} uses one of the following Open VSX registry instances:
 
-* The embedded instance of the Open VSX registry that runs in the `plugin-registry` pod of {prod-short} to support air-gapped, offline, and proxy-restricted environments. The embedded Open VSX registry contains only a subset of the extensions published on link:https://open-vsx.org[open-vsx.org]. This subset is xref:adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance[customizable].
+* The embedded instance of the Open VSX registry that runs in the `plugin-registry` pod of {prod-short} to support air-gapped, offline, and proxy-restricted environments. The embedded Open VSX registry contains only a subset of the extensions published on link:https://open-vsx.org[open-vsx.org]. You can customize this subset xref:adding-or-removing-extensions-in-a-workspace_{context}[using a workspace] or xref:adding-or-removing-extensions-on-linux_{context}[using a Linux operating system].
 
 * The public link:https://open-vsx.org[open-vsx.org] registry that is accessed over the internet.
 
@@ -19,4 +19,6 @@ include::example$snip_{project-context}-default-vsx-registry.adoc[]
 
 include::partial$proc_selecting-an-open-vsx-registry-instance.adoc[leveloffset=+1]
 
-include::partial$proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc[leveloffset=+1]
+include::partial$proc_adding-or-removing-extensions-in-a-workspace.adoc[leveloffset=+1]
+
+include::partial$proc_adding-or-removing-extensions-on-linux.adoc[leveloffset=+1]
