feat: Support OpenShift external IDP
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/pages/installing-che-in-the-cloud.adoc
+++ b/modules/administration-guide/pages/installing-che-in-the-cloud.adoc
@@ -20,6 +20,7 @@ Follow the instructions below to start the {prod-short} Server in the cloud by u
 
 * xref:installing-che-on-openshift-using-cli.adoc[]
 * xref:installing-che-on-openshift-using-the-web-console.adoc[]
+* xref:installing-che-on-openshift-with-keycloak-as-oidc.adoc[]
 * xref:installing-che-in-a-restricted-environment.adoc[]
 * xref:installing-che-on-microsoft-azure.adoc[]
 * xref:installing-che-on-amazon-elastic-kubernetes-service.adoc[]
