--- a/modules/end-user-guide/pages/mounting-secrets.adoc
+++ b/modules/end-user-guide/pages/mounting-secrets.adoc
@@ -19,6 +19,11 @@ Mount {kubernetes} Secrets to the `{devworkspace}` containers in the {orch-name}
 
 * In your user {orch-namespace}, you created a new Secret or determined an existing Secret to mount to all `{devworkspace}` containers.
 
+[WARNING]
+====
+Applying a Secret or ConfigMap with the `controller.devfile.io/mount-to-devworkspace: 'true'` label (or modifying an existing one) triggers an immediate restart of all running workspaces in that {namespace} to apply the configuration. Ensure users have saved their work before applying these changes.
+====
+
 .Procedure
 
 . Add the labels, which are required for mounting the Secret, to the Secret.
