--- a/modules/end-user-guide/pages/mounting-configmaps.adoc
+++ b/modules/end-user-guide/pages/mounting-configmaps.adoc
@@ -19,6 +19,11 @@ Mount {kubernetes} ConfigMaps to the `{devworkspace}` containers in the {orch-na
 
 * In your user {orch-namespace}, you created a new ConfigMap or determined an existing ConfigMap to mount to all `{devworkspace}` containers.
 
+[WARNING]
+====
+Applying a Secret or ConfigMap with the `controller.devfile.io/mount-to-devworkspace: 'true'` label (or modifying an existing one) triggers an immediate restart of all running workspaces in that {namespace} by applying the configuration. Ensure users have saved their work before applying these changes.
+====
+
 .Procedure
 
 . Add the labels, which are required for mounting the ConfigMap, to the ConfigMap.
